..F....... [ZBX-4761] fixed button overflow

--- a/frontends/php/styles/themes/darkblue/jquery-ui.css
+++ b/frontends/php/styles/themes/darkblue/jquery-ui.css
@@ -428,7 +428,7 @@ input.ui-button { padding: .3em 1em; }
 
 /*button sets*/
 .darkblue .ui-buttonset { margin-right: 7px; }
-.darkblue .ui-buttonset .ui-button { margin-left: 0; margin-right: -.4em; }
+.darkblue .ui-buttonset .ui-button { margin-left: 0; margin-right: 0; }
 
 /* workarounds */
 button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra padding in Firefox */
