--- a/frontends/php/styles/themes/originalblue/jquery-ui.css
+++ b/frontends/php/styles/themes/originalblue/jquery-ui.css
@@ -425,7 +425,7 @@ input.ui-button { padding: .3em 1em; }
 .originalblue .ui-button-text-icons .ui-button-icon-secondary, .originalblue .ui-button-icons-only .ui-button-icon-secondary { right: .5em; }
 
 /*button sets*/
-.originalblue .ui-buttonset .ui-button { margin-left: 0; margin-right: -.4em; }
+.originalblue .ui-buttonset .ui-button { margin-left: 0; margin-right: 0; }
 
 /* workarounds */
 button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra padding in Firefox */
